# show_py

./: .flake8  .gitignore  LICENSE  README.md  example.py  pyproject.toml  ruff.toml
.github/workflows/: ci.yml
show_py/: __init__.py  show.py
tests/: test_show.py
